--- a/styles/pages/about/gallery.scss
+++ b/styles/pages/about/gallery.scss
@@ -3,6 +3,9 @@
   margin: 20rem 0;
   position: relative;
   overflow: hidden;
+  pointer-events: none;
+  visibility: hidden;
+  
   &:first-child {
     margin-top: 0;
   }
